--- a/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
+++ b/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
@@ -89,6 +89,8 @@ sakai.membership.description                        = For viewing and modifying 
 sakai.membership.title                              = Membership
 sakai.memory.description                            = For viewing the JVM memory and reseting the system caches
 sakai.memory.title                                  = Memory
+sakai.dummy.title                                   = Dummy site
+sakai.dummy.description                             = A placeholder admin tool for demonstration purposes.
 sakai.messageforums.helper.description              = Message Center Navigation Helper Tool
 sakai.messageforums.helper.title                    = Private Messages Helper
 sakai.messages.description                          = For composing and receiving written messages with other participants in the site
