--- a/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
+++ b/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
@@ -181,8 +181,8 @@ sakai.site.roster2.title                            = Roster
 sakai.site.roster2.description                      = For viewing the site participants list
 sakai.sitebrowser.description                       = For finding and viewing summaries of sites
 sakai.sitebrowser.title                             = Site Browser
-sakai.siteinfo.description                          = For displaying and managing information and settings about the site
-sakai.siteinfo.title                                = Site Info
+sakai.siteinfo.description                          = For displaying and managing information and settings
+sakai.siteinfo.title                                = Manage
 sakai.sites.description                             = For creating and editing sites
 sakai.sites.title                                   = Sites
 sakai.sitesetup.description                         = For creating and modifying sites
