properties file update

--- a/site-manage/site-manage-participant-helper/src/bundle/org/sakaiproject/site/tool/participant/bundle/sitesetupgeneric_sv.properties
+++ b/site-manage/site-manage-participant-helper/src/bundle/org/sakaiproject/site/tool/participant/bundle/sitesetupgeneric_sv.properties
@@ -478,7 +478,7 @@ newsc.appear=Utseende (ikon)\:
 newsc.avail=Tillg\u00e4nglig f\u00f6r\:
 newsc.confirm=Bekr\u00e4fta din sajts utformning
 newsc.course.confirm=Bekr\u00e4fta din kurssajts utformning
-newsc.crsite=Skapa sajt
+newsc.crsite=Skapa 
 newsc.descr=Beskrivning\:
 newsc.descr.none=Ingen beskrivning angiven.
 newsc.icon=URL till ikon\:
