--- a/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
+++ b/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
@@ -14,25 +14,25 @@ content.title           	= Content
 content-mw.title         	= Content
 assessment.title        	= Assessments
 socialinteractions.title   = Social Interactions
-sitemanagement.title    	= Site Management
-sitemanagement-mw.title   	= Site Management
+sitemanagement.title    	= Management
+sitemanagement-mw.title   	= Management
 
 systoolgroups.lti.title    = External Tools 
 systoolgroups.ungrouped.title = Not Grouped 
 
 # Home is a special case, with no tool registration file
 sakai.home.title                                    = Overview
-sakai.home.description                              = For providing an overview of the site, including the site's description and recent announcements, messages, and events
+sakai.home.description                              = For providing an overview of the workspace, including its description and recent announcements, messages, and events
 sakai.admin.prefs.description                       = For administrators to view and modify any user's preferences
 sakai.admin.prefs.title                             = Administrator Preferences
-sakai.adminsiteperms.title                          = Admin Site Perms
-sakai.adminsiteperms.description                    = For managing permissions for all sites of a type and roles within that site
+sakai.adminsiteperms.title                          = Admin Perms
+sakai.adminsiteperms.description                    = For managing permissions for all workspaces of a type and roles within each workspace.
 sakai.aliases.description                           = For managing aliases within the system
 sakai.aliases.title                                 = Aliases
 sakai.announcements.description                     = For posting and viewing current, time-critical information
 sakai.announcements.title                           = Announcements
-sakai.archive.description                           = For archiving and importing sites
-sakai.archive.title                                 = Site Archive
+sakai.archive.description                           = For archiving and importing 
+sakai.archive.title                                 = Archive
 sakai.assignment.description                        = For posting and submitting assignments online
 sakai.assignment.grades.description                 = For posting, submitting, and grading assignments online
 sakai.assignment.grades.title                       = Assignments
@@ -48,15 +48,15 @@ sakai.commons.description                           = For social networking-styl
 sakai.createuser.description                        = For creating a new user account
 sakai.createuser.title                              = New Account
 sakai.delegatedaccess.title                         = Delegated Access
-sakai.delegatedaccess.description                   = For delegating access of users to sites based on a site hierarchy
+sakai.delegatedaccess.description                   = For delegating access to users based on a workspace hierarchy
 sakai.delegatedaccess.shopping.title                = Shopping
-sakai.delegatedaccess.shopping.description          = For searching for available sites for shopping
+sakai.delegatedaccess.shopping.description          = For searching for available workspaces for shopping
 sakai.discussion.description                        = Deprecated tool: please use Forums or other alternative
 sakai.discussion.title                              = Discussion
 sakai.dropbox.description                           = For private file sharing between the instructor and student
 sakai.dropbox.title                                 = Drop Box
 sakai.feedback.title                                = Contact Us
-sakai.feedback.description                          = For gathering feedback and improvements about the site or the system
+sakai.feedback.description                          = For gathering feedback and improvements about the workspace or the system.
 sakai.filepicker.description                        = Sakai File Picker Helper Tool
 sakai.filepicker.title                              = Choose File
 sakai.forums.description                            = For asynchronous, written conversations organized by topics
@@ -74,24 +74,24 @@ sakai.iframe.myworkspace.description                = For displaying information
 sakai.iframe.myworkspace.title                      = Home Information Display
 sakai.iframe.service.description                    = For displaying overview information
 sakai.iframe.service.title                          = Service Information Display
-sakai.iframe.site.description                       = For displaying the site's description
+sakai.iframe.site.description                       = For displaying description
 sakai.iframe.site.title                             = Overview
 sakai.iframe.title                                  = Web Content
 sakai.lessonbuildertool.title                       = Lessons
 sakai.lessonbuildertool.description                 = For creating, organizing, and delivering content modules and sequences, such as by week or unit
 sakai.login.description                             = A login tool
 sakai.login.title                                   = Login
-sakai.mailbox.description                           = For viewing email sent to the site's mailing address
+sakai.mailbox.description                           = For viewing emails sent to the workspace’s mailing address.
 sakai.mailbox.title                                 = Email Archive
 sakai.mailtool.title                                = Email
-sakai.mailtool.description                          = For sending mail to select participants in the site
+sakai.mailtool.description                          = For sending mail to selected participants in the workspace.
 sakai.membership.description                        = For viewing and modifying your membership in sites of which you are a participant or that you may join
 sakai.membership.title                              = Membership
 sakai.memory.description                            = For viewing the JVM memory and reseting the system caches
 sakai.memory.title                                  = Memory
 sakai.messageforums.helper.description              = Message Center Navigation Helper Tool
 sakai.messageforums.helper.title                    = Private Messages Helper
-sakai.messages.description                          = For composing and receiving written messages with other participants in the site
+sakai.messages.description                          = For composing and receiving written messages with other participants in the workspace
 sakai.messages.title                                = Messages
 sakai.metaobj.description                           = Sakai Forms Tool
 sakai.metaobj.form.description                      = Sakai Form Helper Tool
@@ -175,29 +175,29 @@ sakai.simple.rss.title                              = News
 sakai.simple.rss.description                        = For viewing content from RSS feeds 
 sakai.singleuser.description                        = For viewing and modifying your account details
 sakai.singleuser.title                              = Account
-sakai.site.roster.description                       = For viewing the site participants list
+sakai.site.roster.description                       = For viewing the participants list
 sakai.site.roster.title                             = Roster
 sakai.site.roster2.title                            = Roster
-sakai.site.roster2.description                      = For viewing the site participants list
-sakai.sitebrowser.description                       = For finding and viewing summaries of sites
-sakai.sitebrowser.title                             = Site Browser
+sakai.site.roster2.description                      = For viewing the participants list
+sakai.sitebrowser.description                       = For finding and viewing summaries of woorkspaces
+sakai.sitebrowser.title                             = Browser
 sakai.siteinfo.description                          = For displaying and managing information and settings
 sakai.siteinfo.title                                = Manage
-sakai.sites.description                             = For creating and editing sites
+sakai.sites.description                             = For creating and editing workspaces
 sakai.sites.title                                   = Sites
-sakai.sitesetup.description                         = For creating and modifying sites
+sakai.sitesetup.description                         = For creating and modifying workspaces
 sakai.sitesetup.title                               = Worksite Setup
-sakai.schoolsetup.description                        = For creating and modifying sites
+sakai.schoolsetup.description                        = For creating and modifying workspaces
 sakai.schoolsetup.title                              = School Setup
 sakai.sitestats.admin.title                         = Statistics management
 sakai.sitestats.admin.description                   = For statistics management and administration
 sakai.sitestats.title                               = Statistics
-sakai.sitestats.description                         = For displaying usage statistics about the site by user, event, or resource
+sakai.sitestats.description                         = For displaying usage statistics about the workspaces by user, event, or resource
 sakai.su.description                                = For logging in as another user
 sakai.su.title                                      = Become User
 sakai.summary.calendar.description                  = For viewing a summary of calendar events
 sakai.summary.calendar.title                        = Calendar
-sakai.syllabus.description                          = For posting an outline of the site's information, such as objectives, requirements, policies, and expectations
+sakai.syllabus.description                          = For posting an outline of the workspaces's information, such as objectives, requirements, policies, and expectations
 sakai.syllabus.title                                = Syllabus
 sakai.synoptic.announcement.description             = For displaying recent announcements, updated as new events arrive
 sakai.synoptic.announcement.title                   = Recent Announcements
@@ -205,12 +205,12 @@ sakai.synoptic.chat.description                     = For displaying recent chat
 sakai.synoptic.chat.title                           = Recent Chat Messages
 sakai.synoptic.discussion.description               = For displaying recent discussion items, updated as new items arrive
 sakai.synoptic.discussion.title                     = Recent Discussion Items
-sakai.synoptic.messagecenter.description            = For displaying unread discussion and forum topic messages for all sites or a site
+sakai.synoptic.messagecenter.description            = For displaying unread discussion and forum topic messages for all workspaces
 sakai.synoptic.messagecenter.title                  = Message Center Notifications
 sakai.test.tools.OSIDUnitTest.description           = Simple tests of the Sakai OSID Implementations
 sakai.test.tools.OSIDUnitTest.title                 = Sakai OSID Unit Test Servlet
 sakai.usermembership.title                          = User Membership
-sakai.usermembership.description                    = For retrieving site membership information about users
+sakai.usermembership.description                    = For retrieving workspace membership information about users
 sakai.users.description                             = For editing local user accounts
 sakai.users.title                                   = Users
 
@@ -218,7 +218,7 @@ sakai.users.title                                   = Users
 blogger.title                                       = Blogger
 blogger.description                                 = A Blogger 
 
-sakai.jforum.tool.description =For participating in discussions and communicating privately with site members
+sakai.jforum.tool.description =For participating in discussions and communicating privately with workspaces members
 sakai.jforum.tool.title =Discussion and Private Messages
 
 sakai.melete.description = For authoring, publishing, and organizing learning sequences
