--- a/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools_fr_FR.properties
+++ b/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools_fr_FR.properties
@@ -22,7 +22,7 @@ systoolgroups.ungrouped.title=Hors groupes
 
 # Home is a special case, with no tool registration file
 sakai.home.title=Vue d'ensemble
-sakai.home.description=For providing an overview of the site, including the site's description and recent announcements, messages, and events
+sakai.home.description=For providing an overview of the location, including its description and recent announcements, messages, and events.
 sakai.admin.prefs.description=For administrators to view and modify any user's preferences
 sakai.admin.prefs.title=Gestion des pr\u00e9f\u00e9rences
 sakai.adminsiteperms.title=Permissions Espace Admin
@@ -165,9 +165,9 @@ sakai.schedule.description=For posting and viewing events, such as due dates, me
 sakai.schedule.title=Calendrier
 sakai.scheduler.description=For scheduling system jobs based on Quartz
 sakai.scheduler.title=Planificateur de T\u00e2ches
-sakai.search.description=For searching for content in the site
+sakai.search.description=For searching for content
 sakai.search.title=Rechercher
-sakai.sections.description=For managing participant sections, such as classes and rosters, within the site
+sakai.sections.description=For managing permissions for all locations of a type and roles within that location.
 sakai.sections.title=Information des Sections
 sakai.signup.title=Inscription
 sakai.signup.description=Pour permettre l'inscription en ligne aux r\u00e9unions et autres \u00e9v\u00e9nements
@@ -179,23 +179,23 @@ sakai.site.roster.description=Pour la visualisation de la liste des participants
 sakai.site.roster.title=Liste
 sakai.site.roster2.title=Liste
 sakai.site.roster2.description=Pour la visualisation de la liste des participants de l'espace
-sakai.sitebrowser.description=For finding and viewing summaries of sites
-sakai.sitebrowser.title=Navigateur de Sites
-sakai.siteinfo.description=For displaying and managing information and settings about the site
-sakai.siteinfo.title=Information du Site
-sakai.sites.description=For creating and editing sites
+sakai.sitebrowser.description=For finding and viewing summaries.
+sakai.sitebrowser.title=Navigateur de l'espace
+sakai.siteinfo.description=For displaying and managing information and settings about.
+sakai.siteinfo.title=Information du
+sakai.sites.description=For creating and editing
 sakai.sites.title=Espaces
-sakai.sitesetup.description=For creating and modifying sites
+sakai.sitesetup.description=For creating and modifying
 sakai.sitesetup.title=Configuration des espaces
 sakai.sitestats.admin.title=Suivi des apprenants pour l'administrateur
 sakai.sitestats.admin.description=For statistics management and administration
 sakai.sitestats.title=Statistiques
-sakai.sitestats.description=For displaying usage statistics about the site by user, event, or resource
+sakai.sitestats.description=For displaying usage statistics about the location by user, event, or resource.
 sakai.su.description=For logging in as another user
 sakai.su.title=Devenir utilisateur
 sakai.summary.calendar.description=For viewing a summary of calendar events
 sakai.summary.calendar.title=Calendrier
-sakai.syllabus.description=For posting an outline of the site's information, such as objectives, requirements, policies, and expectations
+sakai.syllabus.description=“For posting an outline of the location's information, such as objectives, requirements, policies, and expectations
 sakai.syllabus.title=Plan de cours
 sakai.synoptic.announcement.description=For displaying recent announcements, updated as new events arrive
 sakai.synoptic.announcement.title=Annonces r\u00e9centes
@@ -203,12 +203,12 @@ sakai.synoptic.chat.description=For displaying recent chat messages, updated as 
 sakai.synoptic.chat.title=Messages de Chat r\u00e9cents
 sakai.synoptic.discussion.description=For displaying recent discussion items, updated as new items arrive
 sakai.synoptic.discussion.title=El\u00e9ments de discussions r\u00e9cents
-sakai.synoptic.messagecenter.description=For displaying unread discussion and forum topic messages for all sites or a site
+sakai.synoptic.messagecenter.description=For displaying unread discussion and forum topic messages for all units or a single unit.
 sakai.synoptic.messagecenter.title=Notifications du Centre de Messages
 sakai.test.tools.OSIDUnitTest.description=Simple tests of the Sakai OSID Implementations
 sakai.test.tools.OSIDUnitTest.title=Test Unitaires De Sakai OSID Servlet
 sakai.usermembership.title=Inscriptions des utilisateurs
-sakai.usermembership.description=For retrieving site membership information about users
+sakai.usermembership.description=For retrieving membership information about users
 sakai.users.description=For editing local user accounts
 sakai.users.title=Utilisateurs
 
@@ -216,7 +216,7 @@ sakai.users.title=Utilisateurs
 blogger.title=Blog
 blogger.description=Blog
 
-sakai.jforum.tool.description=For participating in discussions and communicating privately with site members
+sakai.jforum.tool.description=For participating in discussions and communicating privately with members
 sakai.jforum.tool.title=Forum et messages priv\u00e9s
 
 sakai.melete.description=For authoring, publishing, and organizing learning sequences
