--- a/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
+++ b/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
@@ -139,7 +139,7 @@ sakai.resource.helper.description                   = Resource Create Edit Helpe
 sakai.resource.helper.title                         = Resource Create/Edit Helper
 sakai.resource.type.helper.description              = Provides Implementations for Actions of Basic Resource Types
 sakai.resource.type.helper.title                    = Resource Type Helper
-sakai.resources.description                         = For creating, uploading, organizing, and viewing site files, including documents and URLs, to be used throughout the site
+sakai.resources.description                         = For creating, uploading, organizing, and viewing workspace files, including documents and URLs, to be used throughout the workspace.
 sakai.resources.title                               = Resources
 sakai.rights.description                            = For maintaining information about intellectual property rights related to resources
 sakai.rights.title                                  = Rights Helper
@@ -165,9 +165,9 @@ sakai.schedule.description                          = For posting and viewing ev
 sakai.schedule.title                                = Calendar
 sakai.scheduler.description                         = For scheduling system jobs based on Quartz
 sakai.scheduler.title                               = Job Scheduler
-sakai.search.description                            = For searching for content in the site
+sakai.search.description                            = For searching for content
 sakai.search.title                                  = Search
-sakai.sections.description                          = For managing participant sections, such as classes and rosters, within the site
+sakai.sections.description                          = For managing participant sections, such as classes and rosters, within the workspace
 sakai.sections.title                                = Section Info
 sakai.signup.title                                  = Sign-up
 sakai.signup.description                            = For enabling online registration for meetings and other events
