--- a/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric_fr_FR.properties
+++ b/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric_fr_FR.properties
@@ -386,7 +386,7 @@ man.remove=Supprimer
 feat.tools=Outils
 feat.other.tools=Outils disponibles pour les sites autres
 feat.tools.list.summary=Table listing features for your site. Column 1\: checkbox to select. Column 2\: feature name. Column 3\: feature description.
-feat.forv=For providing an overview of the site, including the site's description and recent announcements, messages, and events
+feat.forv=For providing an overview of the workspace, including its description and recent announcements, messages, and events
 feat.reuse=R\u00e9utiliser du mat\u00e9riel d'autres de vos sites
 feat.thanks=Non, merci.
 feat.yesfrom=Oui, de ces sites \:
